gap measurments fixed

--- a/website/static/css/home.css
+++ b/website/static/css/home.css
@@ -14,7 +14,7 @@
 }
 
 .h-30{
-    height: 45rem;
+    height: 34.28571rem;
 }
 
 .guitar-background{
@@ -38,11 +38,11 @@
 }
 
 .gap-4{
-    gap:4rem;
+    gap:3.04762rem;
 }
 
 .gap-2{
-    gap:2rem;
+    gap:1.52381rem;
 }
 
 .pad-4{
